# RePmx2Fbx

./: .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  README.md  README_OLD.md  USAGE.md
.agents/skills/mmd-to-fbx/: SKILL.md
.agents/skills/mmd-to-fbx/scripts/: Convert-MmdToFbx.ps1  convert_mmd_to_fbx.py
PmxLib/: FbxHelper.cpp  FbxHelper.h  PmxReader.h  main.cpp
